# DirectFB2-media

./: AUTHORS  ChangeLog  INSTALL  Kconfig  Make.defs  Makefile  NEWS  README  meson.build  meson_options.txt
interfaces/IDirectFBFont/: idirectfbfont_ft2.c  idirectfbfont_sft.c  idirectfbfont_stb.c  meson.build
interfaces/IDirectFBImageProvider/: idirectfbimageprovider_avif.c  idirectfbimageprovider_bmp.c  idirectfbimageprovider_ffmpeg.c  idirectfbimageprovider_gdkpixbuf.c  idirectfbimageprovider_gif.c  idirectfbimageprovider_heif.c  idirectfbimageprovider_imlib2.c  idirectfbimageprovider_jasper.c  idirectfbimageprovider_jpeg.c  idirectfbimageprovider_jxl.c  idirectfbimageprovider_lodepng.c  idirectfbimageprovider_nanosvg.c  idirectfbimageprovider_openexr.c  idirectfbimageprovider_png.c  idirectfbimageprovider_spng.c  idirectfbimageprovider_stb.c  idirectfbimageprovider_svg.c  idirectfbimageprovider_tiff.c  idirectfbimageprovider_webp.c  idirectfbimageprovider_yuv.c  meson.build
interfaces/IDirectFBVideoProvider/: idirectfbvideoprovider_ffmpeg.c  idirectfbvideoprovider_gstreamer.c  idirectfbvideoprovider_libmpeg3.c  idirectfbvideoprovider_mng.c  idirectfbvideoprovider_plm.c  idirectfbvideoprovider_swfdec.c  idirectfbvideoprovider_v4l.c  meson.build
interfaces/IFusionSoundMusicProvider/: ifusionsoundmusicprovider_ffmpeg.c  ifusionsoundmusicprovider_mad.c  ifusionsoundmusicprovider_playlist.c  ifusionsoundmusicprovider_tremor.c  ifusionsoundmusicprovider_vorbis.c  meson.build
tools/: directfb-csource.c  meson.build  mkdfiff.c  mkdfvff.c  mkdgiff.c
