#  This file is part of DirectFB.
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public
#  License as published by the Free Software Foundation; either
#  version 2.1 of the License, or (at your option) any later version.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA

option('ffmpeg',
       type: 'boolean',
       description: 'FFmpeg video provider')

option('ft2',
       type: 'boolean',
       description: 'FreeType2 font provider')

option('fusionsound',
       type: 'boolean',
       description: 'FusionSound support')

option('gstreamer',
       type: 'boolean',
       description: 'GStreamer video provider')

option('jpeg',
       type: 'boolean',
       description: 'JPEG image provider')

option('png',
       type: 'boolean',
       description: 'PNG image provider')
