#  This file is part of DirectFB.
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public
#  License as published by the Free Software Foundation; either
#  version 2.1 of the License, or (at your option) any later version.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA

option('bmp',
       type: 'boolean',
       description: 'BMP image provider')

option('ffmpeg',
       type: 'boolean',
       description: 'FFmpeg image provider, music provider and video provider')

option('ft2',
       type: 'boolean',
       description: 'FreeType2 font provider')

option('fusionsound',
       type: 'boolean',
       description: 'FusionSound support')

option('gstreamer',
       type: 'boolean',
       description: 'GStreamer video provider')

option('jasper',
       type: 'boolean',
       description: 'JasPer image provider')

option('jpeg',
       type: 'boolean',
       description: 'JPEG image provider')

option('lodepng',
       type: 'string',
       value: 'lodepng',
       description: 'LodePNG image provider')

option('mad',
       type: 'boolean',
       description: 'MAD music provider')

option('mng',
       type: 'boolean',
       description: 'MNG video provider')

option('playlist',
       type: 'boolean',
       description: 'Playlist music provider')

option('png',
       type: 'boolean',
       description: 'PNG image provider')

option('sft',
       type: 'boolean',
       description: 'Schrift font provider')

option('stb_image',
       type: 'string',
       value: 'stb_image.h',
       description: 'STB image provider')

option('stb_truetype',
       type: 'string',
       value: 'stb_truetype.h',
       description: 'STB font provider')

option('svg',
       type: 'boolean',
       description: 'SVG image provider')

option('tiff',
       type: 'boolean',
       description: 'TIFF image provider')

option('tools',
       type: 'boolean',
       description: 'Compile tools')

option('vorbis',
       type: 'boolean',
       description: 'Vorbis music provider')

option('webp',
       type: 'boolean',
       description: 'WebP image provider')

option('yuv',
       type: 'boolean',
       description: 'YUV image provider')
